add phrases endpoint
