# config/openapi_v1.yml
@@ -35,13 +35,40 @@ paths:
       parameters:
         - $ref: '#/components/parameters/NLTKLanguage'
         - $ref: '#/components/parameters/Phrase'
+        - $ref: '#/components/parameters/Tense'
+        - $ref: '#/components/parameters/IdPictograms'
       responses:
         '200':
           description: An object with the list of keywords for the specified language.
           content:
+            text/plain:
+              schema:
+                type: string
+        '500':
+          description: Error
+          content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PhraseResponse'
+                $ref: '#/components/schemas/ErrorResponse'
+
+  '/phrases/report':
+    post:
+      operationId: getReport
+      x-eov-operation-handler: phrases
+      description: 'Send a report when converting a sentence to natural language does not work as expected'
+      tags:
+        - phrases
+      parameters:
+        - $ref: '#/components/parameters/OriginalPhrase'
+        - $ref: '#/components/parameters/ReturnedPhrase'
+        - $ref: '#/components/parameters/ExpectedPhrase'
+      responses:
+        '200':
+          description: An object with the list of keywords for the specified language.
+          content:
+            text/plain:
+              schema:
+                type: string
         '500':
           description: Error
           content:
@@ -511,6 +538,21 @@ paths:
 
 components:
   parameters:
+    Tense:
+      name: tense
+      in: query
+      description: Force the verb tense for natural language.
+      schema:
+        type: string
+        enum: ['future', 'past', 'present']
+    IdPictograms:
+      name: idPictograms
+      in: query
+      description: List of pictograms by id used in one sentence.
+      schema:
+        type: array
+        items:
+          type: integer
     Language:
       name: language
       description: Languages than we currently use for pictograms searches.
@@ -543,6 +585,29 @@ components:
       name: phrase
       description: Phrase to convert to natural language.
       in: path
+      required: true
+      schema:
+        type: string
+
+    OriginalPhrase:
+      name: originalPhrase
+      description: Phrase to convert to natural language.
+      in: query
+      required: true
+      schema:
+        type: string
+
+    ExpectedPhrase:
+      name: expectedPhrase
+      description: Phrase expected from natural language processing.
+      in: query
+      schema:
+        type: string
+
+    ReturnedPhrase:
+      name: returnedPhrase
+      description: Phrase returned from natural language processing.
+      in: query
       required: true
       schema:
         type: string
@@ -622,7 +687,7 @@ components:
       description: Add an extra symbol for indicating a past or future status. It should only be applied to pictograms that represent an action or a verb.
       schema:
         type: string
-        enum: ['past', 'future']
+        enum: ['future', 'past']
     Skin:
       name: skin
       in: query
